--- a/modules/siddhi-query-compiler/pom.xml
+++ b/modules/siddhi-query-compiler/pom.xml
@@ -44,6 +44,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-all</artifactId>
+            <version>5.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <scope>test</scope>
